<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="welcome1">我们社区"联合商家"</string>
    <string name="welcome2">欢迎您的访问!</string>
    <string name="clause">同意并接受下列条款，开始愉快的体验</string>
    <string name="clause_all_check">全部同意</string>
    <string name="clause1">同意并接受基于位子的服务条款 </string>
    <string name="clause2">同意并接受个人广播关联条款 </string>
    <string name="clause3">同意接收营销信息应用程序推送通知 </string>
    <string name="clause_must">(必选)</string>
    <string name="clause_can">(可选)</string>
    <string name="clause_next">开始</string>
    <string name="app_name">联合商家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">确认</string>
    <string name="reset">重置</string>
    <string name="complete">完成</string>
    <string name="finish">终止</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="alert">通知</string>
    <string name="more">展开</string>
    <string name="hide">收起</string>
    <string name="next">下一步</string>
    <string name="possible">可以</string>
    <string name="impossible">不可以</string>
    <string name="ready">准备中</string>
    <string name="common_text001">提示</string>
    <string name="common_text002">确认删除？</string>
    <string name="common_text003">确定</string>
    <string name="common_text004">加入购物车？</string>
    <string name="common_text005">支付成功</string>
    <string name="common_text006">支付结果确认中</string>
    <string name="common_text007">支付失败</string>
    <string name="common_text008">用户取消了支付</string>
    <string name="common_text009">快递   </string>
    <string name="common_text010">您还没有设置收货地址</string>
    <string name="common_text011">可用积分</string>
    <string name="common_text012">无可用积分</string>
    <string name="common_text013">确认收货?</string>
    <string name="common_text014">取消订单</string>
    <string name="common_text015">确认取消订单？</string>
    <string name="common_text016">实付</string>
    <string name="common_text017">应付</string>
    <string name="common_text018">去结算</string>
    <string name="common_text019">订单关闭</string>
    <string name="common_text020">设置支付密码</string>
    <string name="common_text021">去充值</string>
    <string name="common_text022">订单已失效</string>
    <string name="common_text023">待支付</string>
    <string name="common_text024">订单超时</string>
    <string name="common_text025">删除订单</string>
    <string name="common_text026">订单已取消</string>
    <string name="common_text027">订单详情</string>
    <string name="common_text028">预订结果</string>
    <string name="common_text029">预计</string>
    <string name="common_text030">短信告知您预订结果</string>
    <string name="common_text031">支付订单</string>
    <string name="common_text032">支付剩余时间</string>
    <string name="common_text033">确认支付</string>
    <string name="common_text034">星</string>
    <string name="common_text035">最多可添加5张图！</string>
    <string name="common_text036">全部</string>
    <string name="common_text037">未消费</string>
    <string name="common_text038">退款单</string>
    <string name="common_text039">待评价</string>
    <string name="common_text040">订单</string>
    <string name="common_text041">订单编号</string>
    <string name="common_text042">需付款：</string>
    <string name="common_text043">预约成功</string>
    <string name="common_text044">预约编号</string>
    <string name="common_text045">下单成功</string>
    <string name="common_text046">实付款：</string>
    <string name="common_text047">已消费</string>
    <string name="common_text048">请问要取消订单吗？</string>
    <string name="common_text049">取消订单 成功</string>
    <string name="common_text050">取消预约</string>
    <string name="common_text051">请问要取消预约吗？</string>
    <string name="common_text052">取消预约 成功</string>
    <string name="common_text053">申请退款</string>
    <string name="common_text054">请问要申请退款吗？</string>
    <string name="common_text055">申请退款 成功</string>
    <string name="common_text056">请问要取消订单吗？</string>
    <string name="common_text057">取消订单 成功</string>
    <string name="common_text058">预约点餐</string>
    <string name="common_text059">最少一小时后可进行预约</string>
    <string name="common_text060">请输入内容</string>
    <string name="common_text061">营业时间： </string>
    <string name="common_text062">口味：</string>
    <string name="common_text063">环境：</string>
    <string name="common_text064">服务：</string>
    <string name="common_text065">用餐时段</string>
    <string name="common_text066">用餐人数</string>
    <string name="common_text067">餐厅服务</string>
    <string name="common_text069">请选择退货原因！</string>
    <string name="common_text070">最多可上传6张图</string>
    <string name="common_text071">发布时间</string>
    <string name="common_text072">价格最低</string>
    <string name="common_text073">赞</string>
    <string name="common_text074">已赞</string>
    <string name="common_text075">订单时间 : </string>
    <string name="common_text076">已付款</string>
    <string name="common_text077">等待付款</string>
    <string name="common_text078">等待收货</string>
    <string name="common_text079">等待评价</string>
    <string name="common_text080">确认收货？</string>
    <string name="common_text081">已评价</string>
    <string name="common_text082">已取消</string>
    <string name="common_text083">条点评</string>
    <string name="common_text084">订单号：</string>
    <string name="common_text085">已入住</string>
    <string name="common_text086">已离店</string>
    <string name="common_text087">已排房</string>
    <string name="common_text088">未评价</string>
    <string name="common_text089">已预订</string>
    <string name="common_text090">有</string>
    <string name="common_text091">入住人（房间</string>
    <string name="common_text092">未付款</string>
    <string name="common_text093">已点菜</string>
    <string name="common_text094">已预约</string>
    <string name="common_text095">已完成</string>
    <string name="common_text096">退款中</string>
    <string name="common_text097">取消/退款完成</string>
    <string name="common_text098">直接到店</string>
    <string name="common_text099">您的预订尚未支付，请尽快付款</string>
    <string name="common_text101">订单金额</string>
    <string name="common_text102">到店后将订单出示给服务员下单</string>
    <string name="common_text103">您已预约成功，请及时前往餐厅就餐哦</string>
    <string name="common_text104">查看评价</string>
    <string name="common_text105">去评价</string>
    <string name="common_text106">商品</string>
    <string name="common_text107">详情</string>
    <string name="common_text108">评价</string>
    <string name="common_text109">待发货</string>
    <string name="common_text110">已申请</string>
    <string name="common_text111">库存：</string>
    <string name="common_text112">配送费：</string>
    <string name="common_text113">库存为0</string>
    <string name="common_text114">选择图片</string>
    <string name="common_text115">该相册需要赋予访问存储的权限，不开启将无法正常工作！</string>
    <string name="common_text116">今天</string>
    <string name="common_text117">本周</string>
    <string name="common_text118">这个月</string>
    <string name="common_text119">张</string>
    <string name="common_text120">(还剩</string>
    <string name="common_text121">分钟</string>
    <string name="common_text122">秒</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="msg_delete">确定要删除吗</string>
    <string name="sure">确定</string>
    <string name="skip">跳过</string>
    <string name="icon_01">主页</string>
    <string name="icon_02">购物商城</string>
    <string name="icon_03">社区</string>
    <string name="icon_04">客服中心</string>
    <string name="icon_05">聊天</string>
    <string name="icon_06">钱包</string>
    <string name="icon_07">查找定位</string>
    <string name="icon_08">代理申请</string>
    <string name="icon_09">钱包</string>
    <string name="sm_name">网上药店</string>
    <string name="toolbar_mycrazymedia">我的狂乐</string>
    <string name="toolbar_vote">投票活动</string>
    <string name="toolbar_selfticket">自助购票</string>
    <string name="toolbar_onlinevedio">在线视频</string>
    <string name="toolbar_highlights">精彩推荐</string>
    <string name="cm_voteaction">投票活动</string>
    <string name="cm_movie">在线视频</string>
    <string name="cm_more">更多</string>
    <string name="cm_mediapromote">视频推荐</string>
    <string name="servings">/份</string>
    <string name="msg_must_login">请登陆后使用</string>
    <string name="main_text001">请在这里选择门店</string>
    <string name="main_text002">请在这里登陆</string>
    <string name="main_text003">主要功能区</string>
    <string name="main_text004">修改密码</string>
    <string name="main_text005">清除缓存</string>
    <string name="main_text006">设置语言</string>
    <string name="msg_empty_id">请输入ID</string>
    <string name="msg_empty_pw">请输入密码</string>
    <string name="msg_empty_sms">请先接受验证码</string>
    <string name="msg_app_error">未知的错误导致app无法运行</string>
    <string name="msg_init_network_error">由于网络错误导致app无法运行</string>
    <string name="update">更新</string>
    <string name="update_force">强制更新</string>
    <string name="msg_update">APP最新版本已上线，是否要更换到最新版本?</string>
    <string name="msg_force_update">APP最新版本已上线，是否要更换到最新版本?\n(若不选择更新时可能会导致无法继续使用该APP)</string>
    <string name="notice">通知事项</string>
    <string name="check_never_see_again">不再提示</string>
    <string name="run">执行</string>
    <string name="sm_text001">深圳气加  版权所有</string>
    <string name="sm_text002">当前地址不在配送范围</string>
    <string name="sm_text003">物流单号</string>
    <string name="sm_text004">请填写快递单号</string>
    <string name="sm_text005">提交退货物流申请</string>
    <string name="sm_text006">购买数量</string>
    <string name="sm_text007">威海市</string>
    <string name="sm_text008">我的评价</string>
    <string name="sm_text009">待发货</string>
    <string name="sm_text010">确认提交</string>
    <string name="sm_text011">照相</string>
    <string name="sm_text012">本地获取</string>
    <string name="sm_text013">取消</string>
    <string name="sm_text014">市场价格 : </string>
    <string name="sm_text015">送达时间：12:00</string>
    <string name="sm_text016">退货／退款</string>
    <string name="sm_text017">填写物流单号</string>
    <string name="sm_my_order">我的订单</string>
    <string name="sm_cheatpoints">赚积分</string>
    <string name="sm_coupon">优惠券</string>
    <string name="sm_favorites">收藏夹</string>
    <string name="sm_incharge">充值</string>
    <string name="sm_qr">扫一扫</string>
    <string name="sm_homepage">首页</string>
    <string name="sm_store">附近商家</string>
    <string name="sm_classify">分类</string>
    <string name="sm_shoppingcart">购物车</string>
    <string name="sm_mine">我的</string>
    <string name="sm_rs_text10">申请</string>
    <string name="sm_rs_hospital_btn">申请完成</string>
    <string name="sm_rs_student_account">账号</string>
    <string name="sm_rs_student_scholl_name">学校名</string>
    <string name="sm_rs_student_scholl_department_name">学系名</string>
    <string name="sm_rs_student_person_name">名字</string>
    <string name="sm_rs_student_person_phone">联系方式</string>
    <string name="sm_rs_student_card_number">学号</string>
    <string name="sm_rs_student_address">学校住址</string>
    <string name="sm_rs_student_scholl_name_hint">请输入学校名</string>
    <string name="sm_rs_student_scholl_department_name_hint">请输入学系名.</string>
    <string name="sm_rs_student_person_name_hint">请输入名字</string>
    <string name="sm_rs_student_person_phone_hint">请输入联系方式</string>
    <string name="sm_rs_student_card_number_hint">请输入学号</string>
    <string name="sm_rs_student_address_hint">请输入学校地址</string>
    <string name="dp_text_010">姓名</string>
    <string name="dp_text_011">请输入您的姓名</string>
    <string name="dp_text_012">电话</string>
    <string name="dp_text_013">请输入您的电话</string>
    <string name="dp_text_014">邮箱</string>
    <string name="dp_text_015">请输入您的邮箱</string>
    <string name="dp_text_016">请输入您的咨询内容</string>
    <string name="dp_text_017">我们将通过您填写的电话号码，进行咨询内容的回复。</string>
    <string name="dp_text_018">如果电话号码填写错误，将会导致我们无法进行问题回复，填写时请一定要仔细确认。</string>
    <string name="dp_text_019">不同情况下回复时间可能会有所延迟。</string>
    <string name="dp_text_020">提交</string>
    <string name="ht_text_hotel">酒店</string>
    <string name="ht_text_order">订单</string>
    <string name="ht_text_mine">我的</string>
</resources>