<!-- 通用布局  工具栏  1 -->
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/common_toolbar_radiogroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    
    android:gravity="center_vertical"
    android:background="#ffffff" >
    <RadioButton
        android:id="@+id/common_toolbar_dp_home"
        android:checked="true"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/toolbar_dp_homepage"
		android:text="@string/sm_homepage"
		android:textColor="@color/textcolor_dp_tabhost_tabspec_selected"
		android:paddingLeft="0dp"/>
    
    
    <RadioButton
        android:id="@+id/common_toolbar_dp_classify"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/toolbar_dp_classification"
		android:text="@string/sm_classify"
		android:textColor="@color/textcolor_dp_tabhost_tabspec_normal"
		android:paddingLeft="0dp"/>
    <RadioButton
        android:id="@+id/common_toolbar_dp_shoppingcart"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/toolbar_dp_shopingcart"
		android:textColor="@color/textcolor_dp_tabhost_tabspec_normal"
		android:text="@string/sm_shoppingcart"
		android:paddingLeft="0dp"/>
    <RadioButton
        android:id="@+id/common_toolbar_dp_mine"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/toolbar_dp_my"
		android:textColor="@color/textcolor_dp_tabhost_tabspec_normal"
		android:text="@string/sm_mine"
		android:paddingLeft="0dp"/>
</RadioGroup>