<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_window">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/navigation_area"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="609dp"
            android:background="@drawable/img_personalcenter_bg_rs"
            android:paddingBottom="@dimen/marginx2"
            android:paddingTop="@dimen/marginx2">

            <ImageView
                android:id="@+id/student_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="170dp"
                android:layout_marginStart="19dp"
                android:layout_toEndOf="@+id/view"
                android:layout_toRightOf="@+id/view"
                android:gravity="center_vertical"
                android:text="@string/sm_rs_text10"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView01"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_account"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_ID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint=""
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView02"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_scholl_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudentName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_scholl_name_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView03"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_scholl_department_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_Department"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_scholl_department_name_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView04"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_person_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_person_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_person_name_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView05"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_person_phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_hp_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_person_phone_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView06"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_card_number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_IDNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_card_number_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView07"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sm_rs_student_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editStudent_Address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/sm_rs_student_address_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/apply_btn_student"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/rs_hospital_create_btn"
                android:gravity="center"
                android:text="@string/sm_rs_hospital_btn" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
